# solbench

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
crates/solbench-cli/: Cargo.toml
crates/solbench-cli/src/: grpc.rs  main.rs  methods.rs  probe.rs  report.rs  send.rs  server.rs  util.rs
crates/solbench-cli/src/stream/: artifacts.rs  config.rs  mod.rs  profile.rs  report.rs  runner.rs  sources.rs  validation.rs  verify.rs
crates/solbench-core/: Cargo.toml
crates/solbench-core/src/: landing.rs  lib.rs  slotlag.rs  stats.rs  stream.rs  timeline.rs
docs/: artifacts.md  index.html  publishing.md  stream-methodology.md
docs/reports/: index.html
docs/reports/rpcedge-deshred-lifecycle-2026-07-11/: checksums.sha256  config.redacted.toml  index.html  manifest.json  report.md  source-health.json  summary.json
docs/validation/: geyserbench.md  thorofare.md
examples/: stream-pump-amm-rpcedge-triton.toml
examples/validation/: geyserbench-pump-amm.toml  thorofare-pump-amm.md
