[workspace]
resolver = "2"
members = ["crates/solbench-core", "crates/solbench-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
# TODO(nyk): confirm final repo slug before publishing.
repository = "https://github.com/0xNyk/solbench"
authors = ["0xNyk"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = "2"
tiny_http = "0.12"
