[package]
name = "solbench"
description = "Continuous Solana RPC/gRPC/relay benchmark: read latency, jitter, slot-lag, gRPC first-seen, and transaction landing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "solbench"
path = "src/main.rs"

[features]
# Opt-in, heavier metrics. Default build stays lean (ureq + tiny_http only).
send = ["dep:solana-sdk", "dep:bincode", "dep:base64"]
grpc = ["dep:yellowstone-grpc-client", "dep:yellowstone-grpc-proto", "dep:tokio", "dep:futures-util"]

[dependencies]
solbench-core = { path = "../solbench-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
ureq = { workspace = true }
tiny_http = { workspace = true }
anyhow = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
bs58 = "0.5"

# feature `send`
solana-sdk = { version = "2", optional = true }
bincode = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

# feature `grpc` (yellowstone 12.x no longer pulls monolithic solana-sdk)
yellowstone-grpc-client = { version = "12", optional = true }
yellowstone-grpc-proto = { version = "12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
futures-util = { version = "0.3", optional = true }
