[package]
name = "solbench-core"
description = "Reusable latency and landing-rate measurement primitives for Solana RPC/gRPC benchmarking. Foundation crate for solbench and downstream latency harnesses (e.g. the CLOB market-maker)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
